# translatorvoiceinputtool

./: .gitattributes  .gitignore  AGENTS.md  DETERMINISTIC_BUILDS.md  README.md  eslint.config.js  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.beads/.br_history/: issues.20260204_053238.jsonl  issues.20260204_053559.jsonl  issues.20260204_061143.jsonl  issues.20260204_061626.jsonl  issues.20260204_062012.jsonl  issues.20260204_062606.jsonl  issues.20260206_002615.jsonl
.flywheel/: config.env  plan-pro-state.json  refine-state.json
.github/workflows/: build.yml  fuzz.yml  integration.yml  security.yml  test.yml  validate-ipc.yml
.ntm/prompts/: reviewer.md
docs/: COORDINATION_GATES.md  DOD_VERIFICATION.md  KNOWN_LIMITATIONS.md  M0.6-sidecar-packaging-spike.md  MANUAL_CHECKLIST.md  PRIVACY.md  THIRD_PARTY_NOTICES.md
docs/DECISIONS/: 0001-asr-backend.md  README.md
planning/: BROWNFIELD_PREFLIGHT.md  BROWNFIELD_REPOMIX.md  INTERVIEW_TRANSCRIPT.md  PLAN.md  PLAN_codex_iter1.md  PLAN_codex_iter2.md  PLAN_codex_iter3.md  PLAN_codex_iter4.md  PLAN_codex_iter5.md  PLAN_pre_compete.md  PLAN_synthesized.md  PLAN_v0.md  PLAN_v1.md  PLAN_v2.md  QA_REPORT.md  gpt_round1.md  gpt_round2.md
planning/competing/: codex_xhigh.md  gemini_pro.md  gpt52_xhigh.md  opus_1.md  opus_2.md
scripts/: build-sidecar.ps1  build-sidecar.sh  bundle-sidecar.ps1  bundle-sidecar.sh  check_brownfield_compatibility.py  check_contract_aliases.py  check_generated_contracts.sh  demo-gate-1.sh  gen_contract_examples.py  gen_contracts_rs.py  gen_contracts_ts.py  generate_assets.py  repair-bd-hooks.sh  test_contract_validation.py  validate_config_schema_parity.py  validate_contracts.py  validate_ipc_examples.py  validate_model_manifest.py
scripts/benchmark/: latency.py
scripts/e2e/: PACKAGED_RESOURCES_TEST.md  run-all.sh  test-cancel-flow.sh  test-device-removal.sh  test-error-recovery.sh  test-focus-guard.sh  test-full-flow.sh  test-offline-install.sh  test-offline.sh  test-packaged-app.sh  test-packaged-resources.sh  test-startup-health.sh
scripts/tests/: test_build_sidecar_timeout.py  test_bundle_sidecar_resources.py  test_bundle_sidecar_resources_runtime.py  test_cargo_target_dir_ci.py  test_check_brownfield_compatibility.py  test_ci_build_workflow.py  test_ci_integration_workflow.py  test_ci_security_workflow.py  (+35 more)
shared/: BROWNFIELD_COMPATIBILITY.md  DEPENDENCIES_TECH_STACK.md  DESIGN_PRINCIPLES.md  OWNERSHIP.md  SECURITY_PRIVACY_REQUIREMENTS.md  STORAGE_PERSISTENCE_MODEL.md  SYSTEM_ARCHITECTURE.md  TESTING.md
sidecar/: BUILD.md  README.md  entry_point.py  openvoicy_sidecar.spec  pyproject.toml  self-test
sidecar/src/openvoicy_sidecar/: __init__.py  __main__.py  audio.py  audio_meter.py  model_cache.py  notifications.py  postprocess.py  preprocess.py  protocol.py  recording.py  replacements.py  resources.py  self_test.py  server.py  vad.py
sidecar/src/openvoicy_sidecar/asr/: __init__.py  base.py  dispatch.py  parakeet.py  whisper.py
sidecar/tests/: __init__.py  test_asr.py  test_asr_status.py  test_audio.py  test_audio_meter.py  test_audio_meter_status.py  test_backend_dispatch.py  test_ipc_compliance.py  test_language.py  test_model_cache.py  test_model_install.py  test_notifications.py  test_postprocess.py  test_preprocess.py  test_presets.py  test_process_text.py  test_protocol_fuzz.py  test_recording.py  test_recording_cancel.py  test_recording_sessions.py  test_recording_status.py  test_replacements.py  test_resource_resolution.py  test_self_test.py  test_server.py  test_startup_health.py  test_status.py  test_system_info.py  test_vad.py  test_vad_edge_cases.py  test_whisper_backend.py
sidecar/tests/fuzz/: __init__.py  test_protocol_fuzz.py
sidecar/tools/: collect_sidecar_evidence.py
src/: App.tsx  index.css  types.contracts.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/corpus/protocol_parser/: edge_large_number.json  edge_nested.json  edge_unicode.json  seed_000.json  seed_001.json  seed_002.json  seed_003.json  seed_004.json  seed_005.json  seed_006.json  seed_007.json  seed_008.json  seed_009.json  seed_010.json  seed_011.json  seed_012.json  seed_013.json  seed_014.json  seed_015.json  seed_016.json  seed_017.json  seed_018.json  seed_019.json  seed_020.json  seed_021.json  seed_022.json  seed_023.json  seed_024.json  seed_025.json  seed_026.json  seed_027.json  seed_028.json  seed_029.json  seed_030.json  seed_031.json  seed_032.json  seed_033.json  seed_034.json  seed_035.json  seed_036.json  (+28 more)
src-tauri/fuzz/fuzz_targets/: protocol_parser.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio_cue.rs  capabilities.rs  commands.rs  config.rs  contracts.rs  event_seq.rs  focus.rs  history.rs  history_persistence.rs  hotkey.rs  injection.rs  integration.rs  lib.rs  log_buffer.rs  main.rs  model_defaults.rs  overlay.rs  recording.rs  sidecar.rs  state.rs  supervisor.rs  tray.rs  watchdog.rs
src-tauri/src/errors/: kinds.rs  mod.rs  remediation.rs
src-tauri/src/ipc/: mod.rs  types.rs
src-tauri/tests/: test_language_extension.rs
(+109 files in other folders)
