[package]
name = "translator-voice-input-tool"
version = "0.1.0"
description = "A voice-to-text input tool using local ASR"
authors = ["you"]
edition = "2021"

[lib]
name = "translator_voice_input_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["sync", "time", "io-util", "macros", "rt"] }
thiserror = "2"
phf = { version = "0.11", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
regex = "1"
dirs = "5"
global-hotkey = "0.6"
png = "0.17"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
