[package]
name = "openvoicy-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.translator_voice_input_tool_lib]
path = ".."
package = "translator-voice-input-tool"

[[bin]]
name = "protocol_parser"
path = "fuzz_targets/protocol_parser.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

[workspace]
members = ["."]
